# ExplainableStats

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  setup.py
data/: stocks.csv
src/: main.py  main_ts.py  utils.py
src/ExplainableML.egg-info/: PKG-INFO  SOURCES.txt
src/models/: _07_logistic_regression.py  adaboost.py  decision_tree.py  random_forest.py  svm.py  xgboost.py
src/models/regression/: _02_logit.py  _03_multinomial.py  _04_ordinal.py
src/models/segmentation/: _01_gmm.py  _02_fmm.py  _10_fm.py  _10_fmm.py  _13_fm_multinomial.py  _13_fmm_multinomial.py  _14_fm_poisson.py  _14_fmm_poisson.py
src/models/supervised/: _02_random_forest.py  _03_adaboost.py  _04_xgboost.py  _06_naive_bayes.py  _07_logistic_regression.py  _08_logistic_regression.py  _11_perceptron.py  _12_nn.py  _13_cnn.py  _14_rnn.py  _15_lstm.py
src/models/timeseries/: _12_lstm.py
tests/: smoke_test.py
